Made metric space example more specific

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -100,10 +100,15 @@ opinions are closer to the center.
 \begin{figure}[htbp]
     \centering
     \input{content/figures/system-metric-space.tikz}
-    \caption{Example of a 1D preference metric space, where \truthof{x} represents the
-    preference of agent $x$.}
+    \caption{
+        Example of a 1D preference metric space, where \truthof{x} represents the
+        preference of agent $x$.
+        The x-axis represents some preference space, where the leftmost point is
+        the most preference most against some idea and the rightmost point is the most
+        preference most in favor of the same idea.
+    }
     \label{fig:system-metric-space}
-\end{figure}\vicki{explain 0 and 10 or label x axis}
+\end{figure}
 
 This model also naturally extends to two- or higher-dimensional spaces.
 These would include more complex and multi-faceted topics, such as migration, which
