Resolved if something needs to trigger proxy voting

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -171,8 +171,7 @@ more efficiently without being physically present for a vote like when attending
 conference or engaging in active research in some location outside {Washington,~D.C}.
 This is, of course, directly applicable to the House of Representatives, since proxy
 voting would allow them to prevent the spread of disease or avoid whatever other
-emergency triggered the use of proxy voting.  \vicki{Does something have to trigger
-proxy voting, or can it be used for personal reasons?}
+emergency triggered the use of proxy voting.
 
 In these cases, proxy voting allows voters to skip incurring the costs while
 still having their voice heard by allowing a proxy to pay the cost once on behalf of
