Specified why the system loses accuracy

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -197,17 +197,19 @@ of other agents.
 As will be discussed in the results section of the thesis,
 % \autoref{ch:results},  % TODO: Uncomment for thesis
 this additional system welfare comes at
-the cost of some system accuracy in terms of the actual preferences of the voters
-since not all information can be restored.  \vicki{We need to understand what is
-allowed. Why couldn't the designator give the precise value (on the scale)? I realize
-this is not done, but why?}
+the cost of some system accuracy in terms of the actual preferences of the voters.
+This cost comes about because voters are generally unable to perfectly express their
+preference and so rely on their proxy to vote in a way that is close to their
+preference.
+However, not all information can be restored through the use of a proxy since they
+are also unable to perfectly express their preference nor those of their delegator(s),
+and so this information will be lost and the system's accuracy will suffer.
 
 In some cases, the proxy is also able to transfer their own vote, as well as the rest of
 their delegated weight, to yet another proxy.
-This is known as \textit{liquid democracy}, which has its own challenges and
-advantages.
-Regardless, in this study, we will only consider the case where the proxy is not
-able to transfer their vote to yet another proxy.
+This is known as \textit{liquid democracy}, which has its own challenges and advantages.
+Regardless, in this study, we will only consider the case where the proxy is not able
+to transfer their vote to yet another proxy.
 
 However, proxy voting is not without its flaws.
 \etal{Kling} investigated a weakness in liquid democracy dubbed
