Resolved additional issues

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -215,12 +215,9 @@ However, proxy voting is not without its flaws.
 \etal{Kling} investigated a weakness in liquid democracy dubbed
 `super voters'~\cite{Kling2015}, which are proxies that receive an extremely large
 amount of power, while others gain very little.
-While they determined these proxies tend to use their power wisely, possible
-\vicki{possibly?} to avoid
+While they determined these proxies tend to use their power wisely, possibly to avoid
 estranging those voters who delegate their power to the proxy, there can be
-situations where they \vicki{who?} can be problematic with one-off issues.
-\vicki{before we went 0,10. Why not be consistent? a notation could help. Perhaps
-\{0,1\} for discrete voting and [a,b] for interval voting.}
+situations where super voters can be problematic with one-off issues.
 As a simple example, consider a vote taking over preference
 space $\systemspace = [-1, 1]$ with agent preferences $\truthof{\agent_1} = -1$,
 $\truthof{\agent_2} = 0.25$, $\truthof{\agent_3} = 0.5$, $\truthof{\agent_4} = 1$,
