Added notes for Previous Work

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -285,6 +285,8 @@ duties and avoid spreading disease.
 %   - Additional voting mechanisms
 %   - Weighting mechanisms
 
+% TODO: Find more papers talking about proxy voting error
+% TODO: Outline methods for performing analysis and test design
 
 
 \vicki{This isn't previous work. Previous work is more like: Researcher B looked at
