Added some notes on Miller

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -248,6 +248,23 @@ mechanisms minimize this error, is precisely what this paper will explore.
 
 
 \section{Previous Work}\label{sec:previous-work}
+\vicki{
+    This isn't previous work.
+    Previous work is more like: Researcher B looked at proxy voting in two space
+    using manhattan distance between proxy and inactive voter.
+    Using the methods of X,Y, and Z, they discovered that proxy voting had an error
+    of Q when used on population T. However, they did not consider W (which we intend
+    to explore).
+    In other words, your previous work needs to give the best alternative to what you
+    are doing.
+    You will also compare yourself to the alternative.
+    We need to know what others have done in order to (1) know if you've done
+    anything useful (2) understand your credentials in doing this work.
+    Previous work will also describe standard methods of doing analysis, so we can
+    see the motivation for the way you designed the tests.
+}
+% FIXME: This might need to be moved to Background. It feels somewhere in between
+%   both Previous Work and Background.
 James Miller~\cite{Miller1969} proposed using proxy voting as a more direct method of
 democracy rather than representative democracy.
 His work focuses on reworking the current House and Senate systems entirely by using a
@@ -274,6 +291,9 @@ to become an expert in the issues they are voting on.
 As such, we differ from Miller in the sense that all voters ought to be experts in
 the field, and so we use proxy voting to allow them to be more efficient in their
 duties and avoid spreading disease.
+Additionally, Miller did not consider using proxy voting for use by members of Congress,
+which we will explore in this paper.
+
 
 % Explain what Cohensius did
 %   - Strategic participation
@@ -287,18 +307,6 @@ duties and avoid spreading disease.
 
 % TODO: Find more papers talking about proxy voting error
 % TODO: Outline methods for performing analysis and test design
-
-
-\vicki{This isn't previous work. Previous work is more like: Researcher B looked at
-proxy voting in two space using manhattan distance between proxy and inactive voter.
-Using the methods of X,Y, and Z, they discovered that proxy voting had an error of Q
-when used on population T. However, they did not consider W (which we intend to
-explore). In other words, your previous work needs to give the best alternative to
-what you are doing. You will also compare yourself to the alternative. We need to
-know what others have done in order to (1) know if you've done anything useful (2)
-    understand your credentials in doing this work. Previous work will also describe
-    standard methods of doing analysis, so we can see the motivation for the way you
-    designed the tests. }
 
 
 \section{Proposed Work}\label{sec:contribution}
