Added Previous Work | Cohensius

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -294,6 +294,23 @@ duties and avoid spreading disease.
 Additionally, Miller did not consider using proxy voting for use by members of Congress,
 which we will explore in this paper.
 
+\etal{Cohensius}~\cite{Cohensius2019} explore the use of proxy voting in a metric space
+using three voting mechanisms: mean, median, and majority.
+They discovered proxy voting using any of these mechanisms generally produces lower
+error than direct voting with active voters alone.
+This is not too surprising: reintroducing information lost through inactive voters by
+using a proxy system ought to help the system.
+Nevertheless, they were able to show that proxy voting is effective under a number of
+symmetrical and asymmetrical preference distributions, and under both random and
+strategic participation.
+However, the majority of their research focuses on voting with infinite populations.
+While this work would certainly be applicable to larger populations, since a
+population of sufficient size will begin to behave like an infinite
+population~($\lim_{x \rightarrow \infty} x = \infty$), we are more interested in the
+effects of proxy voting on a relatively small, finite population of 435 members of the
+House of Representatives.
+As such, we will explore the effects of proxy voting on a finite population of this
+size, as well as explore other possible voting mechanisms.
 
 % Explain what Cohensius did
 %   - Strategic participation
