--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -263,20 +263,29 @@ mechanisms minimize this error, is precisely what this paper will explore.
     Previous work will also describe standard methods of doing analysis, so we can
     see the motivation for the way you designed the tests.
 }
+
 % FIXME: This might need to be moved to Background. It feels somewhere in between
 %   both Previous Work and Background.
-James Miller~\cite{Miller1969} proposed using proxy voting as a more direct method of
-democracy rather than representative democracy.
+James Miller~\cite{Miller1969} imagined a governmental system utilizing proxy voting
+all the way back in 1969 as a more direct form of a representative democracy.\footnote{
+    That is to say, Miller envisioned a system where individuals could directly vote
+    for an issue, or elect a proxy to vote for them.
+    Naturally, any democracy that uses proxy voting is a representative democracy,
+    since the proxy is representing the delegator.
+    Nevertheless, it can be argued that Miller's proposal could provide a more direct
+    democracy since a voter can directly vote for an issue is they so choose.
+}
 His work focuses on reworking the current House and Senate systems entirely by using a
 more-directly involved populace, but his ideas can still be relevant under the current
 system.
 In particular, he introduces the idea we call \textit{expert proxies},
 those being individuals who would `vote as [the delegator] would if only
 [the delegator] had the time and knowledge to participate directly'~\cite{Miller1969}.
-While for the general populace this could be a very useful benefit of proxy voting,
-it is not one that is directly applicable to the House of Representatives.
+While for the general populace this could be a very valuable benefit of proxy voting,
+it is not entirely desirable for the House of Representatives.
 One of the reasons individuals are elected to the House of Representatives is to
-research and determine laws that are in the best interest of the people.
+research and create laws that are in the best interest of the people on behalf of
+the people.
 Though the past 25 Congresses have seen anywhere from 10 to over 25 thousand issues
 over 2 years, only around 10\% are actually discussed~\cite{GovTrack2022}.
 That would be approximately 1000 to 2500 issues per Congress, or about 500 to 1250 per
@@ -288,11 +297,13 @@ competent, in each field [on which they are voting]'~\cite{Miller1969}.
 This reinforces the idea that a member of the House of Representatives should be, as
 their title would suggest, a representative of the people and have the responsibility
 to become an expert in the issues they are voting on.
+To remove this responsibility from the House of Representatives would be to remove
+a large portion of their duties, and could easily result in the dictatorship of a few.
 As such, we differ from Miller in the sense that all voters ought to be experts in
 the field, and so we use proxy voting to allow them to be more efficient in their
-duties and avoid spreading disease.
-Additionally, Miller did not consider using proxy voting for use by members of Congress,
-which we will explore in this paper.
+duties and avoid spreading disease instead of reworking the system entirely.
+Additionally, Miller did not consider using proxy voting for use by members of
+Congress as it currently works, which we will explore in this paper.
 
 \etal{Cohensius}~\cite{Cohensius2017} explore the use of proxy voting in a metric space
 using three voting mechanisms: mean, median, and majority.
