--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -312,7 +312,7 @@ error than direct voting with active voters alone.
 This is not too surprising: reintroducing information lost through inactive voters by
 using a proxy system ought to help the system.
 Nevertheless, they were able to show that proxy voting is effective under a number of
-symmetrical and asymmetrical preference distributions, and under both random and
+symmetrical and asymmetrical preference distributions, while under both random and
 strategic participation.
 However, the majority of their research focuses on voting with infinite populations.
 While this work would certainly be applicable to larger populations, since a
