Added additional source
Need to use it in previous work

--- a/references/research.bib
+++ b/references/research.bib
@@ -187,4 +187,22 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   readstatus   = {read},
 }
 
+@InProceedings{10.5555/3091125.3091386,
+  author     = {Mathur, Anurita and Bhattacharyya, Arnab},
+  booktitle  = {Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems},
+  title      = {On the Gap between Outcomes of Voting Rules},
+  location   = {S\~{a}o Paulo, Brazil},
+  pages      = {1631–1633},
+  publisher  = {International Foundation for Autonomous Agents and Multiagent Systems},
+  series     = {AAMAS '17},
+  url        = {https://dl.acm.org/doi/10.5555/3091125.3091386},
+  abstract   = {Various voting rules (or social choice procedures) have been proposed to select a winner from the preferences of an entire population: Plurality, veto, Borda, Minimax, Copeland, etc. Although in theory, these rules may yield drastically different outcomes, for real-world datasets, behavioral social choice analyses have found that the rules are often in perfect agreement with each other! This work attempts to give a mathematical explanation of this phenomenon. We quantify the gap between the outcomes of two voting rules by the pairwise margin between their winners. We show that for many common voting rules, the gap between them can be almost as large as 1 when the votes are unrestricted. As a counter, we study the behavior of voting rules when the vote distribution is a uniform mixture of a small number of multinomial logit distributions. This scenario corresponds to a population consisting of a small number of groups, each voting according to a latent preference ranking. We show that for any such voting profile on g groups, at least 1/2g fraction of the population prefers the winner of a Borda election to any other candidate.},
+  address    = {Richland, SC},
+  comment    = {Gives an ordering for various voting mechanisms for single-winner elections. Also uses real-world data to show the Condorcet paradox actually rarely occurs in real life.},
+  keywords   = {computational social choice, voting, latent preferences},
+  numpages   = {3},
+  readstatus = {read},
+  year       = {2017},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
