Changed key of new article

--- a/references/research.bib
+++ b/references/research.bib
@@ -187,7 +187,7 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   readstatus   = {read},
 }
 
-@InProceedings{10.5555/3091125.3091386,
+@InProceedings{Mathur2017,
   author     = {Mathur, Anurita and Bhattacharyya, Arnab},
   booktitle  = {Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems},
   title      = {On the Gap between Outcomes of Voting Rules},
