Some about Mathur2017

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -323,6 +323,15 @@ House of Representatives.
 As such, we will explore the effects of proxy voting on a finite population of this
 size, as well as explore other possible voting mechanisms.
 
+This study will additionally look at voting mechanisms and attempt to determine which
+mechanism is best suited for proxy voting.
+This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms applied
+on a single-winner election vote and determined a ranking for these mechanisms.
+Our work will differ significantly from theirs, however, as we will explore voting
+mechanisms used under proxy voting instead of single-winner elections, and most of
+our mechanisms will be different due to some incapability of the mechanisms the used
+on a continuous preference space.
+
 % TODO: Find more papers talking about proxy voting error
 % TODO: Outline methods for performing analysis and test design
 
