--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -18,11 +18,23 @@ The purpose behind the resolution was to allow the House of Representatives
 to continue operating while still allowing members to quarantine and prevent the
 spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for future use
 of proxy voting in other such emergencies.
-However, the question remains as to what degree proxy voting affects the results of
-the vote.
-In this study, we explore the effects of proxy voting on the results of the vote
-under a number of opinion distributions.
-We additionally explore how different voting rules affect the results of the vote.
+Using proxy voting in such an important part of the legislative process reignites the
+discussion on the effectiveness of proxy voting.
+Does proxy voting introduce too much error into the voting process?
+Or is it a viable alternative to direct voting?
+If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
+can be used to mitigate that effect while still maintaining the benefits of proxy
+voting.
+This study attempts to answer these questions by analyzing the effects of proxy
+voting on the results of a vote under a number of preference distributions.
+We employ several voting mechanisms and rank them according to their performance when
+applied under several preference distributions.
+We additionally explore the use of alternative proxy voting systems, such as
+allowing an individual to select a preference dependent on the positions of their
+constituents, and determine if they are more effective than the traditional proxy
+voting system where a single proxy is chosen.
+Finally, as a part of this study we implement and describe voting over a continuous
+interval instead of the typical binary in favor or against vote.
 
 This topic is of large importance because of the potential ramifications of using
 proxy voting directly in the legislative process.
@@ -33,7 +45,8 @@ Similarly, if proxy voting can be shown to have a large effect on the results of
 vote, it would be important to alter the system to mitigate the effects or stop using
 proxy voting in the House altogether.
 In either case, it is important to understand the effects of proxy voting so it can
-be utilized in the most effective way possible.
+be utilized in the most effective way possible, as well as discover any potential
+techniques to improve such a system.
 
 
 \section{Assumptions and Preliminaries}\label{sec:assumptions-and-preliminaries}
